--- a/templates/ntp.conf
+++ b/templates/ntp.conf
@@ -7,7 +7,9 @@ filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
 
-server {{ ntp_server }}
+{% for clock in ntp_servers %}
+server {{ clock }}
+{% endfor %}
 
 # By default, exchange time with everybody, but don't allow configuration.
 restrict -4 default kod notrap nomodify nopeer noquery
